--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>hello</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, dolorum!</p>
 </body>
 </html>
